# DiS-Courseworks

./: .gitignore  README.md
C1/: README.md  requirements.txt
C1/docs/: .gitignore
C1/docs/source/: api.rst  conf.py  index.rst  (+2 more)
C1/dual_autodiff/: .gitignore  pyproject.toml
C1/dual_autodiff/dual_autodiff/: __init__.py  dual.py
C1/dual_autodiff/tests/: test_dual.py
C1/dual_autodiff_x/: pyproject.toml  setup.py
C1/dual_autodiff_x/dual_autodiff_x/: __init__.py  dual.c  dual.cpp  dual.pyx
C1/dual_autodiff_x/tests/: test_dual.py
C1/dual_autodiff_x/wheelhouse/: dual_autodiff_x-0.0.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  dual_autodiff_x-0.0.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
C1/notebooks/: differentiate_function.ipynb  mystyle.mplstyle  performance_benchmark.py  performance_comparison.ipynb
C1/report/: references.bib  report.tex
M1/: README.md  requirements.txt
M1/notebooks/: best_neural_network_tsne.ipynb  classifer_comparison.ipynb  data_generation_analysis.ipynb  linear_classifiers.ipynb  neural_network.ipynb  neural_network_optuna.ipynb
M1/report/: references.bib  report.tex
M1/src/: data_handler.py  linear_classifiers.py  models.py  plot_settings.py  visualization.py
S1/: README.md  requirements.txt
S1/notebooks/: all_samples.npy  b_c_norm_visualization.ipynb  bootstrap_results.csv  d_gen_sample_estimate.ipynb  e_bootstrapping.ipynb  f_sWeights.ipynb  mystyle.mplstyle  sWeights_results.csv  samples.npy
S1/report/: references.bib  report.tex
S1/src/: pdfs_numba_stats.py  pdfs_scipy.py
(+3 files in other folders)
