[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "dual_autodiff_x"
version = "0.0.1"
authors = [{ name="Xin Li", email="xl628@cam.ac.uk" }]
description = "Cythonized version of dual_autodiff package"
dependencies = []

[tool.cibuildwheel]
# Build only for Python 3.10 and 3.11 on x86_64
build = ["cp310-manylinux_x86_64", "cp311-manylinux_x86_64"]
skip = ["*-win32", "*-win_amd64", "*-macosx_*"]

[tool.pytest.ini_options]
addopts = "-v --cov=dual_autodiff_x --cov-report term-missing" # coverage report
testpaths = ["tests"]